# gogoo-panel-status

./: .anjuta_sym_db.db  CMakeLists.txt  CONTENTS  ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: CMakeLists.txt  Makefile.in  gogoo-panel-status.desktop.in
data/theme/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt  or.po
src/: CMakeLists.txt  Makefile.in  com.meego.UX.Shell.Panels.status.service.in  gogoo-panel-status.pc.in  mps-geotag-pane.c  mps-geotag-pane.c~  sw-online.c
