SET(THEME_SRCS
	panel.css 
	add_status_header.png 
	add_status_header_hover.png 
	status_header_hover.png 
	avatar_icon.png 
	status_entry_box.png 
	alt_status_header.png 
	alt_status_header_hover.png 
	current_status_header.png 
	avatar_frame.png 
	status_card_background.png 
	retweet.png 
	retweet-hover.png 
	tweet-reply.png 
	tweet-reply-hover.png 
	icon-bg-hover.png 
	location-box-bg.png 
	content-panel-background.png 
	panel-background.png 
	background-gradient.png 
	people.png 
	content-panel-header-grey.png
    )

INSTALL(FILES ${THEME_SRCS} DESTINATION ${PKG_DATADIR}/gogoo-panel-status/theme)



